// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox should handle events on random button 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-9hfsy2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-9hfsy2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:hover,
.cache-9hfsy2:focus {
  border-color: #4f0599;
}

.cache-9hfsy2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-9hfsy2::-webkit-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::-moz-placeholder {
  opacity: 1;
}

.cache-9hfsy2:-ms-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::placeholder {
  opacity: 1;
}

.cache-17qg6q9 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-17qg6q9:hover,
.cache-17qg6q9:focus-within {
  color: #b2b6c3;
}

.cache-17qg6q9>button {
  box-shadow: none!important;
}

.cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-9hfsy2 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-17qg6q9 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should handle events on toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-9hfsy2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-9hfsy2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:hover,
.cache-9hfsy2:focus {
  border-color: #4f0599;
}

.cache-9hfsy2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-9hfsy2::-webkit-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::-moz-placeholder {
  opacity: 1;
}

.cache-9hfsy2:-ms-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::placeholder {
  opacity: 1;
}

.cache-17qg6q9 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-17qg6q9:hover,
.cache-17qg6q9:focus-within {
  color: #b2b6c3;
}

.cache-17qg6q9>button {
  box-shadow: none!important;
}

.cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-9hfsy2 e18bmnpq0"
        name="password"
        type="text"
        value=""
      />
      <div
        class="cache-17qg6q9 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
          title="Hide"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M11.83,9L15,12.16C15,12.11 15,12.05 15,12A3,3 0 0,0 12,9C11.94,9 11.89,9 11.83,9M7.53,9.8L9.08,11.35C9.03,11.56 9,11.77 9,12A3,3 0 0,0 12,15C12.22,15 12.44,14.97 12.65,14.92L14.2,16.47C13.53,16.8 12.79,17 12,17A5,5 0 0,1 7,12C7,11.21 7.2,10.47 7.53,9.8M2,4.27L4.28,6.55L4.73,7C3.08,8.3 1.78,10 1,12C2.73,16.39 7,19.5 12,19.5C13.55,19.5 15.03,19.2 16.38,18.66L16.81,19.08L19.73,22L21,20.73L3.27,3M12,7A5,5 0 0,1 17,12C17,12.64 16.87,13.26 16.64,13.82L19.57,16.75C21.07,15.5 22.27,13.86 23,12C21.27,7.61 17,4.5 12,4.5C10.6,4.5 9.26,4.75 8,5.2L10.17,7.35C10.74,7.13 11.35,7 12,7Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-cg6jsl {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-cg6jsl::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl:hover,
.cache-cg6jsl:focus {
  border-color: #4f0599;
}

.cache-cg6jsl:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-cg6jsl::-webkit-input-placeholder {
  opacity: 1;
}

.cache-cg6jsl::-moz-placeholder {
  opacity: 1;
}

.cache-cg6jsl:-ms-input-placeholder {
  opacity: 1;
}

.cache-cg6jsl::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-cg6jsl e18bmnpq0"
        type="text"
        value=""
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly disabled true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1wr00md {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1wr00md::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wr00md::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wr00md:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wr00md::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1wr00md:hover,
.cache-1wr00md:focus {
  border-color: #4f0599;
}

.cache-1wr00md:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1wr00md::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1wr00md::-moz-placeholder {
  opacity: 1;
}

.cache-1wr00md:-ms-input-placeholder {
  opacity: 1;
}

.cache-1wr00md::placeholder {
  opacity: 1;
}

.cache-1g7upxo {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #d4dae7;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1wr00md e18bmnpq0"
        disabled=""
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-1g7upxo e18bmnpq3"
        disabled=""
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly error string 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1678798 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  border-color: #ef5774;
}

.cache-1678798::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1678798::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1678798:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1678798::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1678798:hover,
.cache-1678798:focus {
  border-color: #4f0599;
}

.cache-1678798:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1678798::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1678798::-moz-placeholder {
  opacity: 1;
}

.cache-1678798:-ms-input-placeholder {
  opacity: 1;
}

.cache-1678798::placeholder {
  opacity: 1;
}

.cache-1678798:hover,
.cache-1678798:focus {
  border-color: #cf0f34;
}

.cache-1678798:focus {
  box-shadow: 0 0 0 2px rgba(239,87,116,0.25);
  border-color: #ef5774;
}

.cache-14px29 {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
  color: #ef5774;
}

.cache-f39kmy {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
  -webkit-transition: max-height 300ms ease-in,opacity 300ms ease-in;
  transition: max-height 300ms ease-in,opacity 300ms ease-in;
  max-height: 56px;
  opacity: 1;
  overflow: visible;
}

.cache-f39kmy.cache-f39kmy {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1678798 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-14px29 e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-f39kmy e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      >
        test error
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-cg6jsl {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-cg6jsl::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl:hover,
.cache-cg6jsl:focus {
  border-color: #4f0599;
}

.cache-cg6jsl:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-cg6jsl::-webkit-input-placeholder {
  opacity: 1;
}

.cache-cg6jsl::-moz-placeholder {
  opacity: 1;
}

.cache-cg6jsl:-ms-input-placeholder {
  opacity: 1;
}

.cache-cg6jsl::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-label="Test"
        autocomplete="on"
        class="cache-cg6jsl e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-cg6jsl {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
}

.cache-cg6jsl::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-cg6jsl:hover,
.cache-cg6jsl:focus {
  border-color: #4f0599;
}

.cache-cg6jsl:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-cg6jsl::-webkit-input-placeholder {
  opacity: 1;
}

.cache-cg6jsl::-moz-placeholder {
  opacity: 1;
}

.cache-cg6jsl:-ms-input-placeholder {
  opacity: 1;
}

.cache-cg6jsl::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-cg6jsl e18bmnpq0"
        type="text"
        value="test"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly label and noTopLabel 3`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-12yle18 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-12yle18::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:hover,
.cache-12yle18:focus {
  border-color: #4f0599;
}

.cache-12yle18:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-12yle18::-webkit-input-placeholder {
  opacity: 1;
}

.cache-12yle18::-moz-placeholder {
  opacity: 1;
}

.cache-12yle18:-ms-input-placeholder {
  opacity: 1;
}

.cache-12yle18::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-12yle18 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly multiline true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-x20o41 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: initial;
  resize: none;
  padding-top: 8px;
}

.cache-x20o41::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-x20o41::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-x20o41:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-x20o41::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-x20o41:hover,
.cache-x20o41:focus {
  border-color: #4f0599;
}

.cache-x20o41:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-x20o41::-webkit-input-placeholder {
  opacity: 1;
}

.cache-x20o41::-moz-placeholder {
  opacity: 1;
}

.cache-x20o41:-ms-input-placeholder {
  opacity: 1;
}

.cache-x20o41::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-x20o41 e18bmnpq0"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly required true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1xi9ix4 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-1xi9ix4::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1xi9ix4::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1xi9ix4:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1xi9ix4::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1xi9ix4:hover,
.cache-1xi9ix4:focus {
  border-color: #4f0599;
}

.cache-1xi9ix4:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1xi9ix4::-webkit-input-placeholder {
  opacity: 1;
}

.cache-1xi9ix4::-moz-placeholder {
  opacity: 1;
}

.cache-1xi9ix4:-ms-input-placeholder {
  opacity: 1;
}

.cache-1xi9ix4::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-3qh7in {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
}

.cache-3qh7in:hover,
.cache-3qh7in:focus-within {
  color: #b2b6c3;
}

.cache-1h0xriv {
  fill: #ef5774;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1h0xriv.cache-1h0xriv {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1xi9ix4 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
      <div
        class="cache-3qh7in e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1h0xriv e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with ariaControls 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-c4nr8x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-c4nr8x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:hover,
.cache-c4nr8x:focus {
  border-color: #4f0599;
}

.cache-c4nr8x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        aria-controls="test-control"
        aria-labelledby="test-control"
        autocomplete="on"
        class="cache-c4nr8x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
        id="test-control"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-12yle18 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-12yle18::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:hover,
.cache-12yle18:focus {
  border-color: #4f0599;
}

.cache-12yle18:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-12yle18::-webkit-input-placeholder {
  opacity: 1;
}

.cache-12yle18::-moz-placeholder {
  opacity: 1;
}

.cache-12yle18:-ms-input-placeholder {
  opacity: 1;
}

.cache-12yle18::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-12yle18 e18bmnpq0"
        id="test"
        placeholder="type..."
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with defaultValue true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-c4nr8x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-c4nr8x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:hover,
.cache-c4nr8x:focus {
  border-color: #4f0599;
}

.cache-c4nr8x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-c4nr8x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with edit true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-12yle18 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-12yle18::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:hover,
.cache-12yle18:focus {
  border-color: #4f0599;
}

.cache-12yle18:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-12yle18::-webkit-input-placeholder {
  opacity: 1;
}

.cache-12yle18::-moz-placeholder {
  opacity: 1;
}

.cache-12yle18:-ms-input-placeholder {
  opacity: 1;
}

.cache-12yle18::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-12yle18 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with fillAvailable true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-c4nr8x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-c4nr8x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:hover,
.cache-c4nr8x:focus {
  border-color: #4f0599;
}

.cache-c4nr8x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-c4nr8x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with generated true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-12yle18 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-12yle18::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:hover,
.cache-12yle18:focus {
  border-color: #4f0599;
}

.cache-12yle18:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-12yle18::-webkit-input-placeholder {
  opacity: 1;
}

.cache-12yle18::-moz-placeholder {
  opacity: 1;
}

.cache-12yle18:-ms-input-placeholder {
  opacity: 1;
}

.cache-12yle18::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-12yle18 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with height prop 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-12yle18 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-12yle18::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:hover,
.cache-12yle18:focus {
  border-color: #4f0599;
}

.cache-12yle18:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-12yle18::-webkit-input-placeholder {
  opacity: 1;
}

.cache-12yle18::-moz-placeholder {
  opacity: 1;
}

.cache-12yle18:-ms-input-placeholder {
  opacity: 1;
}

.cache-12yle18::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-12yle18 e18bmnpq0"
        style="height: 90px;"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with notice 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-12yle18 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-12yle18::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-12yle18:hover,
.cache-12yle18:focus {
  border-color: #4f0599;
}

.cache-12yle18:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-12yle18::-webkit-input-placeholder {
  opacity: 1;
}

.cache-12yle18::-moz-placeholder {
  opacity: 1;
}

.cache-12yle18:-ms-input-placeholder {
  opacity: 1;
}

.cache-12yle18::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

.cache-26qj9x {
  color: #b2b6c3;
  font-size: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.cache-26qj9x.cache-26qj9x {
  margin-top: 8px;
}

.cache-1fnb4bm {
  fill: currentColor;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1fnb4bm.cache-1fnb4bm {
  vertical-align: top;
  margin-right: 8px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-12yle18 e18bmnpq0"
        type="text"
        value="test"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
    <div
      class="e1qg14600 cache-26qj9x e7ah3bn0"
    >
      <svg
        class="sc-ui-icon etwatq50 cache-1fnb4bm e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M11,9H13V7H11M12,20C7.59,20 4,16.41 4,12C4,7.59 7.59,4 12,4C16.41,4 20,7.59 20,12C20,16.41 16.41,20 12,20M12,2A10,10 0 0,0 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M11,17H13V11H11V17Z"
        />
      </svg>
      <div
        class="ejtitxs0 cache-11a6inf e7ah3bn0"
      >
        <p>
          <span>
            Test notice
          </span>
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with null right component 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-2i96i {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-2i96i::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-2i96i::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-2i96i:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-2i96i::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-2i96i:hover,
.cache-2i96i:focus {
  border-color: #4f0599;
}

.cache-2i96i:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-2i96i::-webkit-input-placeholder {
  opacity: 1;
}

.cache-2i96i::-moz-placeholder {
  opacity: 1;
}

.cache-2i96i:-ms-input-placeholder {
  opacity: 1;
}

.cache-2i96i::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-enimff {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  -webkit-transform: translateY(8px);
  -moz-transform: translateY(8px);
  -ms-transform: translateY(8px);
  transform: translateY(8px);
  pointer-events: auto;
}

.cache-enimff:hover,
.cache-enimff:focus-within {
  color: #b2b6c3;
}

.cache-enimff>button {
  box-shadow: none!important;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-2i96i e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-enimff e18bmnpq4"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with readOnly true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-1nkhgmf {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  background-color: #f6f5f7;
  border-color: #f6f6f8;
  color: #4a4f62;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-1nkhgmf::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1nkhgmf::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1nkhgmf:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1nkhgmf::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-1nkhgmf:hover,
.cache-1nkhgmf:focus {
  border-color: #4f0599;
}

.cache-1nkhgmf:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1h9ivvt {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #b2b6c3;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-1nkhgmf e18bmnpq0"
        name="test"
        readonly=""
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1h9ivvt e18bmnpq3"
        readonly=""
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-102nep6 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-102nep6::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6:hover,
.cache-102nep6:focus {
  border-color: #4f0599;
}

.cache-102nep6:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-ydccok {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-ydccok:hover,
.cache-ydccok:focus-within {
  color: #b2b6c3;
}

.cache-18iy4dy {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #d4dae7;
}

.cache-d8atl3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-d8atl3.cache-d8atl3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-102nep6 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-ydccok e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-18iy4dy e7ah3bn0"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-d8atl3 e7ah3bn0"
        >
          px
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with unit is px and required 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-5ggq28 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 22px;
}

.cache-5ggq28::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-5ggq28::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-5ggq28:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-5ggq28::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-5ggq28:hover,
.cache-5ggq28:focus {
  border-color: #4f0599;
}

.cache-5ggq28:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-ydccok {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  padding-top: 0;
  padding-bottom: 0;
  -webkit-transform: none;
  -moz-transform: none;
  -ms-transform: none;
  transform: none;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.cache-ydccok:hover,
.cache-ydccok:focus-within {
  color: #b2b6c3;
}

.cache-18iy4dy {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #eeeeff;
  margin-right: 8px;
  margin-top: 1px;
  height: calc(100% - 2px);
  background-color: #d4dae7;
}

.cache-d8atl3 {
  color: #4a4f62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #b2b6c3;
  font-size: 14px;
  line-height: 18px;
}

.cache-d8atl3.cache-d8atl3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-self: flex-end;
  -ms-flex-item-align: flex-end;
  align-self: flex-end;
  padding-top: 8px;
  padding-bottom: 8px;
}

.cache-1huqh94 {
  fill: #ef5774;
  height: 8px;
  width: 8px;
  min-width: 8px;
  min-height: 8px;
}

.cache-1huqh94.cache-1huqh94 {
  vertical-align: middle;
  margin-left: 2px;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-5ggq28 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-ydccok e18bmnpq4"
      >
        <hr
          aria-orientation="vertical"
          class="e18bmnpq5 eoti1h20 cache-18iy4dy e7ah3bn0"
          role="separator"
        />
        <p
          class="e1g1zfwd0 cache-d8atl3 e7ah3bn0"
        >
          px
          <svg
            class="sc-ui-icon etwatq50 cache-1huqh94 e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
            />
          </svg>
        </p>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid false 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-c4nr8x {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
}

.cache-c4nr8x::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-c4nr8x:hover,
.cache-c4nr8x:focus {
  border-color: #4f0599;
}

.cache-c4nr8x:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-c4nr8x e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render correctly with valid true 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-102nep6 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-102nep6::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-102nep6:hover,
.cache-102nep6:focus {
  border-color: #4f0599;
}

.cache-102nep6:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1arooal {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
}

.cache-xjcwzr {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
}

.cache-xjcwzr:hover,
.cache-xjcwzr:focus-within {
  color: #b2b6c3;
}

.cache-1xh8xlv {
  fill: #45d6b5;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.cache-1xh8xlv.cache-1xh8xlv {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-102nep6 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1arooal e18bmnpq3"
      >
        test
      </label>
      <div
        class="cache-xjcwzr e18bmnpq4"
      >
        <svg
          class="sc-ui-icon etwatq50 cache-1xh8xlv e7ah3bn0"
          viewBox="0 0 24 24"
        >
          <path
            d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render multiline with props 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-49s1qd {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-top: 20px;
  height: 100%;
  resize: vertical;
  padding-top: 8px;
}

.cache-49s1qd::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-49s1qd::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-49s1qd:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-49s1qd::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-49s1qd:hover,
.cache-49s1qd:focus {
  border-color: #4f0599;
}

.cache-49s1qd:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-49s1qd::-webkit-input-placeholder {
  opacity: 1;
}

.cache-49s1qd::-moz-placeholder {
  opacity: 1;
}

.cache-49s1qd:-ms-input-placeholder {
  opacity: 1;
}

.cache-49s1qd::placeholder {
  opacity: 1;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-49s1qd e18bmnpq0"
        cols="50"
        rows="10"
      />
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render on focus 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-tn8it3 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-top: 20px;
  height: initial;
  resize: vertical;
}

.cache-tn8it3::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-tn8it3::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-tn8it3:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-tn8it3::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-tn8it3:hover,
.cache-tn8it3:focus {
  border-color: #4f0599;
}

.cache-tn8it3:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-tn8it3::-webkit-input-placeholder {
  opacity: 1;
}

.cache-tn8it3::-moz-placeholder {
  opacity: 1;
}

.cache-tn8it3:-ms-input-placeholder {
  opacity: 1;
}

.cache-tn8it3::placeholder {
  opacity: 1;
}

.cache-11rykwc {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  -webkit-transform: translate(-9.6%, -3px) scale(0.8);
  -moz-transform: translate(-9.6%, -3px) scale(0.8);
  -ms-transform: translate(-9.6%, -3px) scale(0.8);
  transform: translate(-9.6%, -3px) scale(0.8);
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <textarea
        autocomplete="on"
        class="cache-tn8it3 e18bmnpq0"
        cols="50"
        id="test"
        rows="10"
      />
      <label
        aria-live="assertive"
        class="cache-11rykwc e18bmnpq3"
        for="test"
      >
        Test
      </label>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-9hfsy2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-9hfsy2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:hover,
.cache-9hfsy2:focus {
  border-color: #4f0599;
}

.cache-9hfsy2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-9hfsy2::-webkit-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::-moz-placeholder {
  opacity: 1;
}

.cache-9hfsy2:-ms-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::placeholder {
  opacity: 1;
}

.cache-17qg6q9 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-17qg6q9:hover,
.cache-17qg6q9:focus-within {
  color: #b2b6c3;
}

.cache-17qg6q9>button {
  box-shadow: none!important;
}

.cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-9hfsy2 e18bmnpq0"
        name="test"
        type="text"
        value=""
      />
      <div
        class="cache-17qg6q9 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render random 2`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-61cl3e {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  cursor: default;
  pointer-events: none;
  background-color: #f6f6f8;
  border-color: #fcfcfd;
  color: #d4dae7;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding-right: 32px;
}

.cache-61cl3e::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-61cl3e::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-61cl3e:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-61cl3e::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-61cl3e:hover,
.cache-61cl3e:focus {
  border-color: #4f0599;
}

.cache-61cl3e:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-1s4sa9c {
  display: block;
  position: absolute;
  left: 0;
  top: 0;
  padding-left: 8px;
  padding-right: 8px;
  pointer-events: none;
  color: #b2b6c3;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
  height: 48px;
  font-size: 16px;
  -webkit-transition: -webkit-transform 150ms;
  transition: transform 150ms;
  -webkit-transform: translate(0, 12px) scale(1);
  -moz-transform: translate(0, 12px) scale(1);
  -ms-transform: translate(0, 12px) scale(1);
  transform: translate(0, 12px) scale(1);
  color: #d4dae7;
}

.cache-17qg6q9 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-17qg6q9:hover,
.cache-17qg6q9:focus-within {
  color: #b2b6c3;
}

.cache-17qg6q9>button {
  box-shadow: none!important;
}

.cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-61cl3e e18bmnpq0"
        disabled=""
        name="test"
        type="text"
        value=""
      />
      <label
        aria-live="assertive"
        class="cache-1s4sa9c e18bmnpq3"
        disabled=""
      >
        test
      </label>
      <div
        class="cache-17qg6q9 e18bmnpq4"
      >
        <button
          aria-disabled="true"
          class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
          disabled=""
          title="Randomize"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M7.5,5.6L5,7L6.4,4.5L5,2L7.5,3.4L10,2L8.6,4.5L10,7L7.5,5.6M19.5,15.4L22,14L20.6,16.5L22,19L19.5,17.6L17,19L18.4,16.5L17,14L19.5,15.4M22,2L20.6,4.5L22,7L19.5,5.6L17,7L18.4,4.5L17,2L19.5,3.4L22,2M13.34,12.78L15.78,10.34L13.66,8.22L11.22,10.66L13.34,12.78M14.37,7.29L16.71,9.63C17.1,10 17.1,10.65 16.71,11.04L5.04,22.71C4.65,23.1 4,23.1 3.63,22.71L1.29,20.37C0.9,20 0.9,19.35 1.29,18.96L12.96,7.29C13.35,6.9 14,6.9 14.37,7.29Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextBox should render toggleable password 1`] = `
<DocumentFragment>
  .cache-bjn8wh {
  position: relative;
}

.cache-9hfsy2 {
  -webkit-transition: border-color 0.2s ease,box-shadow 0.2s ease;
  transition: border-color 0.2s ease,box-shadow 0.2s ease;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  background-color: #fff;
  background-image: none;
  border: 1px solid #d4dae7;
  border-radius: 4px;
  color: #4a4f62;
  display: block;
  max-width: 100%;
  outline: none;
  position: relative;
  width: 100%;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 14px;
  font-size: 16px;
  line-height: 24px;
  height: 48px;
  padding-left: 8px;
  padding-right: 20px;
  padding-top: 14px;
  padding: 8px;
  padding-right: 32px;
}

.cache-9hfsy2::-webkit-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::-moz-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:-ms-input-placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2::placeholder {
  color: #b2b6c3;
  opacity: 0;
}

.cache-9hfsy2:hover,
.cache-9hfsy2:focus {
  border-color: #4f0599;
}

.cache-9hfsy2:focus {
  box-shadow: 0 0 0 2px rgba(79,5,153,0.25);
  border-color: #4f0599;
}

.cache-9hfsy2::-webkit-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::-moz-placeholder {
  opacity: 1;
}

.cache-9hfsy2:-ms-input-placeholder {
  opacity: 1;
}

.cache-9hfsy2::placeholder {
  opacity: 1;
}

.cache-17qg6q9 {
  pointer-events: none;
  position: absolute;
  right: 0;
  bottom: 0;
  top: 0;
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transition: -webkit-transform 150ms,color 150ms;
  transition: transform 150ms,color 150ms;
  color: #b2b6c3;
  pointer-events: auto;
}

.cache-17qg6q9:hover,
.cache-17qg6q9:focus-within {
  color: #b2b6c3;
}

.cache-17qg6q9>button {
  box-shadow: none!important;
}

.cache-l6o7sv {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
}

.cache-l6o7sv[aria-disabled='true'] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-l6o7sv[aria-disabled='false'] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1xppsrc {
  fill: currentColor;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-1xppsrc.cache-1xppsrc {
  vertical-align: middle;
}

.cache-1w6vxon {
  -webkit-transition: max-height 300ms ease-out,opacity 300ms ease-out;
  transition: max-height 300ms ease-out,opacity 300ms ease-out;
  max-height: 0;
  overflow: hidden;
  opacity: 0;
  height: auto;
  margin-top: 0;
}

.cache-1w6vxon.cache-1w6vxon {
  overflow: hidden;
}

.cache-aclg18 {
  font-size: 12px;
  color: #ef5774;
  padding-top: 2px;
}

<div
    class="cache-11djngs e7ah3bn0"
  >
    <div
      class="cache-bjn8wh e18bmnpq2"
    >
      <input
        autocomplete="on"
        class="cache-9hfsy2 e18bmnpq0"
        name="password"
        type="password"
        value=""
      />
      <div
        class="cache-17qg6q9 e18bmnpq4"
      >
        <button
          aria-disabled="false"
          class="e1kgqxfn0 cache-l6o7sv e7ah3bn0"
          title="Show"
          type="button"
        >
          <svg
            class="sc-ui-icon etwatq50 cache-1xppsrc e7ah3bn0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="e14o3tsk0 cache-1w6vxon e7ah3bn0"
    >
      <div
        class="cache-aclg18 e18bmnpq1"
      />
    </div>
  </div>
</DocumentFragment>
`;
